# mkbib

./: Cargo.toml  README.md  journals.json  org.mavensgroup.mkbib.yml
.github/workflows/: release.yml
assets/: org.mavensgroup.mkbib.desktop
src/: app.rs  main.rs
src/api/: doi.rs  mod.rs
src/app/: alert.rs  mod.rs  model.rs  update.rs
src/core/: config.rs  file_ops.rs  keygen.rs  mod.rs
src/logic/: abbreviator.rs  action.rs  deduplicator.rs  fetch.rs  formatter.rs  library.rs  merger.rs  mod.rs  undo.rs
src/menu/: actions_edit.rs  actions_file.rs  actions_help.rs  file_io.rs  mod.rs
src/ui/: details_dialog.rs  duplicate_dialog.rs  mod.rs  preferences.rs  row.rs  search_dialog.rs  sidebar.rs
