[package]
name = "mkbib-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
gtk4 = { version = "0.7", features = ["v4_10"] }
relm4 = { version = "0.7", features = ["libadwaita", "macros"] }
relm4-components = "0.7"

# Network & Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # Needed for DOI/ISBN lookups
toml = "0.8"        # <--- REPLACES serde_json
directories = "5.0" # <--- NEW: For cross-platform paths

# BibTeX Handling (Better for editing than Hayagriva)
biblatex = "0.8"
anyhow = "1.0"
