[package]
name = "mkbib"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A modern BibTeX editor for GTK4"

[dependencies]
gtk4 = { version = "0.7", features = ["v4_10"] }
relm4 = { version = "0.7", features = ["libadwaita", "macros"] }
relm4-components = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
biblatex = "0.8"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# --- LINUX PACKAGING ---

# 1. DEB (Debian/Ubuntu)
[package.metadata.deb]
section = "utils"
depends = "$auto, libgtk-4-1, libadwaita-1-0"
maintainer = "The Mavens Group"
assets = [
    ["target/release/mkbib", "/usr/bin/mkbib", "755"],
    ["assets/org.mavensgroup.mkbib.desktop", "/usr/share/applications/org.mavensgroup.mkbib.desktop", "644"],
    ["assets/org.mavensgroup.mkbib.svg", "/usr/share/icons/hicolor/scalable/apps/org.mavensgroup.mkbib.svg", "644"]
]

# 2. RPM (Fedora/RedHat)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/mkbib", dest = "/usr/bin/mkbib", mode = "755" },
    { source = "assets/org.mavensgroup.mkbib.desktop", dest = "/usr/share/applications/org.mavensgroup.mkbib.desktop", mode = "644" },
    { source = "assets/org.mavensgroup.mkbib.svg", dest = "/usr/share/icons/hicolor/scalable/apps/org.mavensgroup.mkbib.svg", mode = "644" }
]
auto-req = "yes"
